cli/tests/snapshots/arguments__balance_cancel.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"balance\", \"cancel\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Balance(
        BalanceCommand {
            subcommand: Cancel(
                BalanceCancelCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
