cli/tests/snapshots/arguments__balance_pause.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"balance\", \"pause\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Balance(
        BalanceCommand {
            subcommand: Pause(
                BalancePauseCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
