cli/tests/snapshots/arguments__balance_resume.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"balance\", \"resume\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Balance(
        BalanceCommand {
            subcommand: Resume(
                BalanceResumeCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
