cli/tests/snapshots/arguments__balance_start_missing_path.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"balance\", \"start\"])"
---
error: the following required arguments were not provided:
  <PATH>
