cli/tests/snapshots/arguments__balance_status.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"balance\", \"status\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Balance(
        BalanceCommand {
            subcommand: Status(
                BalanceStatusCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
