cli/tests/snapshots/arguments__device_add_all_flags.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"add\", \"-f\", \"-K\", \"--enqueue\", \"/dev/sdb\",\n\"/dev/sdc\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Add(
                DeviceAddCommand {
                    force: true,
                    nodiscard: true,
                    enqueue: true,
                    devices: [
                        "/dev/sdb",
                        "/dev/sdc",
                    ],
                    target: "/mnt",
                },
            ),
        },
    ),
}
