cli/tests/snapshots/arguments__device_add_force.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"device\", \"add\", \"-f\", \"/dev/sdb\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Device(
        DeviceCommand {
            subcommand: Add(
                DeviceAddCommand {
                    force: true,
                    nodiscard: false,
                    enqueue: false,
                    devices: [
                        "/dev/sdb",
                    ],
                    target: "/mnt",
                },
            ),
        },
    ),
}
