cli/tests/snapshots/arguments__device_add_missing_mount.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"device\", \"add\", \"/dev/sdb\"])"
---
error: 2 values required by '<ARGS> <ARGS>...'; only 1 was provided
